# sfs-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  build.sh  config.vdf  readme.md  test.vdf
.cargo/: config.toml
.github/workflows/: rust.yml
src/: config.rs  main.rs  web.rs
