[package]
name = "sfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
egui_dnd = "0.5.0"
fancy-regex = "0.11.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rfd = "0.12.0"
serde = "1.0.188"
simple-home-dir = "0.2.0"
