[package]
name = "sfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
eframe = "0.23.0"
egui = "0.23.0"
egui_dnd = "0.5.0"
egui_extras = { version = "*", features = ["file", "http", "image"] }
fancy-regex = "0.11.0"
image = "0.24.7"
reqwest = "0.11.20"
rfd = "0.12.0"
simple-home-dir = "0.2.0"
steam-api = "0.4.1"
